[project]
name = "behavesim-search"
version = "0.1.0"
description = "A project for behavioral simulation search"
dependencies = [
    "numpy",
    "scipy",
    "swanlab",
    "openai",
    "tree-sitter",
    "tree-sitter-python",
    "black>=25.12.0",
    "editdistance>=0.8.1",
    "scikit-learn>=1.7.2",
]
requires-python = ">=3.10"
